--- a/ReactWithDotNet.WebSite/ReactWithDotNet.WebSite.csproj
+++ b/ReactWithDotNet.WebSite/ReactWithDotNet.WebSite.csproj
@@ -45,6 +45,9 @@
 		<Compile Update="Showcases\RSuiteAutoCompleteDemo.cs">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</Compile>
+		<Compile Update="Showcases\BasicDashboardDemo.cs">
+		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Compile>
 		<Compile Update="Showcases\SwiperGalleryDemo.cs">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</Compile>
