--- a/ReactWithDotNet.WebSite/ReactWithDotNet.WebSite.csproj
+++ b/ReactWithDotNet.WebSite/ReactWithDotNet.WebSite.csproj
@@ -11,6 +11,7 @@
 		<PackageReference Include="YamlDotNet" Version="16.3.0" />
 		<PackageReference Include="Microsoft.CodeAnalysis.Compilers" Version="4.12.0" />
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.12.0" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	</ItemGroup>
 
 	<ItemGroup>
