--- a/ReactWithDotNet.WebSite/VisualDesigner/Project.yaml
+++ b/ReactWithDotNet.WebSite/VisualDesigner/Project.yaml
@@ -9,3 +9,11 @@ styles:
   bg-weak: "background: #F5F7FA"
   bg-white: "background: #FFFFFF"
   heading-05: "font-family: 'Host Grotesk'; font-size: 24px; font-style: normal; font-weight: 600; line-height: 32px;"
+
+globalCss: |
+  @font-face {
+    font-family: 'Host Grotesk';
+    src: url('/fonts/HostGrotesk-Regular.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+  }
